<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="#d0d0d0"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="0dp"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal" >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="left|center"
            android:clickable="true"
            android:id="@+id/logo" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="80dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/naslov"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/header_font"
                android:textAlignment="center" />
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/qrDugme"
            android:id="@+id/qrButton"
            android:background="@drawable/dugme"
            android:textColor="#720f10"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/space"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:textSize="25dp"
            android:textAllCaps="false"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:id="@+id/space" />

        <Button
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/infoDugme"
            android:id="@+id/infoButton"
            android:background="@drawable/dugme"
            android:textColor="#720f10"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/space"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:textSize="25dp"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:id="@+id/srbija"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/space2"
            android:layout_marginRight="25dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:id="@+id/space2" />

        <Button
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:id="@+id/engleska"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/srbija"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="25dp" />
    </RelativeLayout>

</RelativeLayout>
