<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="#d0d0d0"

        android:id="@+id/linearLayout"
        android:layout_marginTop="0dp"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="left|center"
            android:clickable="true"
            android:id="@+id/logoID" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/headerID"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/header_font"
                android:textAlignment="center"
                android:textIsSelectable="false" />
        </FrameLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewID"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/mainViewID">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opis1OmuzejuID"
                android:paddingTop="20dp"
                android:layout_marginLeft="@dimen/prikaz_lr_margina"
                android:layout_marginRight="@dimen/prikaz_lr_margina"
                android:text="@string/opis1Omuzeju"
                android:layout_marginBottom="@dimen/prikaz_tb_margina"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_below="@+id/opis1OmuzejuID"
                android:layout_alignParentStart="true"
                android:src="@drawable/omuzeju"
                android:layout_marginLeft="@dimen/prikaz_lr_margina"
                android:layout_marginRight="@dimen/prikaz_lr_margina" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/opis2Omuzeju"
                android:id="@+id/opis2OmuzejuID"
                android:layout_alignParentBottom="false"
                android:layout_below="@+id/imageView"
                android:layout_marginBottom="@dimen/prikaz_tb_margina"
                android:layout_marginRight="@dimen/prikaz_lr_margina"
                android:layout_marginLeft="@dimen/prikaz_lr_margina"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lokacijaMuzej"
                android:id="@+id/textView"
                android:layout_below="@+id/opis2OmuzejuID"
                android:layout_marginLeft="@dimen/prikaz_lr_margina"
                android:layout_marginBottom="@dimen/prikaz_tb_margina"
                android:textColor="#720f10" />

            <fragment
                android:id="@+id/map"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="@dimen/prikaz_lr_margina"
                android:layout_below="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:name="com.google.android.gms.maps.MapFragment"/>

        </RelativeLayout>
    </ScrollView>


</LinearLayout>